changed api url from http to https

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             function sendReq(){
                 const type = document.getElementById('type').value;
-                const url = 'http://www.boredapi.com/api/activity?type=' + type;
+                const url = 'https://www.boredapi.com/api/activity?type=' + type;
 
                 const activity = document.getElementById('activTitle');
                 const participants = document.getElementById('participants');
