responsive fix on small mobiles

--- a/index.html
+++ b/index.html
@@ -370,8 +370,13 @@
                 }
 
                 .chooseType{
-                    font-size: 20px;
+                    margin-top: 20vh;
+                    font-size: 11px;
                     text-align: center;
+                }
+                
+                .activity{
+                    margin-top: -10vh;
                 }
 
                 select#type{
